--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "jshint": "^2.8.0"
   },
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint appjs"
+    "test": "./node_modules/jshint/bin/jshint app.js"
   }
 }
