--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "jshint": "^2.8.0"
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.16.5"
   },
   "scripts": {
     "test": "react-scripts test"
