--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "boemo",
   "version": "1.0.0",
   "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "@testing-library/jest-dom": "^5.16.5"
   },
   "scripts": {
